--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
         <input type="text" placeholder="Sök efter stad" spellcheck="false" />
         <button><img src="images/Search.png" alt="search-icon" /></button>
       </div>
+      <div class="error">
+        <p>Stavade du rätt?</p>
+      </div>
       <div class="weather">
         <img src="images/rain.png" class="weather-icon">
 
         <h1 class="temp">21°C</h1>
-        <h2 class="city">Stockholm</h2>
+        <h2 class="city">Sök stad</h2>
 
 <!-- details about current weather -->
         <div class="details">
