påbörjat tid och datum

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
         <h1 class="temp">21°C</h1>
         <h2 class="city">Sök stad</h2>
+        <p class="time">14 Maj 00:00</p>
 
         <!-- details about current weather -->
         <div class="details">
