--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="container">
       <div class="search">
-        <input type="text" placeholder="Sök efter stad" spellcheck="false" />
+        <input type="text" class="inputvalue" placeholder="Sök efter stad" spellcheck="false" />
         <button><img src="images/Search.png" alt="search-icon" /></button>
       </div>
       <div class="error">
