--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
         <h1 class="temp">21°C</h1>
         <h2 class="city">Sök stad</h2>
+        <p>Vad är klockan i Sverige?</p>
         <p id="time">00:00</p>
         <p id="date">14 Maj</p>
 
