--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     <script src="main.js" defer></script>
   </head>
 
-
   <body>
-
     <div class="container">
       <div class="search">
-        <input type="text" class="inputvalue" placeholder="Sök efter stad" spellcheck="false" />
+        <input
+          type="text"
+          class="inputvalue"
+          placeholder="Sök efter stad"
+          spellcheck="false"
+        />
         <button><img src="images/Search.png" alt="search-icon" /></button>
       </div>
       <div class="error">
@@ -31,41 +34,31 @@
 
         <h1 class="temp">21°C</h1>
         <h2 class="city">Sök stad</h2>
-        <p>Vad är klockan i Sverige?</p>
         <p id="time">00:00</p>
         <p id="date">14 Maj</p>
 
-
-        <!-- details about current weather -->
         <div class="details">
-          <!--columns containing the details for each type of weather-->
           <div class="col">
             <div>
-            <img src="images/humidity.png" />
-            <p class="humidity">50%</p>
-            <p>Humidity</p>
+              <img src="images/humidity.png" />
+              <p class="humidity">50%</p>
+              <p>Humidity</p>
             </div>
           </div>
           <div class="col">
             <div>
-            <img src="images/wind.png" />
-            <p class="wind">50%</p>
-            <p>Wind</p>
+              <img src="images/wind.png" />
+              <p class="wind">50%</p>
+              <p>Wind</p>
             </div>
-          </div>          <div class="col">
+          </div>
+          <div class="col">
             <div>
-            <img src="images/pressure.png" />
-            <p class="pressure">50%</p>
-            <p>Pressure</p>
+              <img src="images/pressure.png" />
+              <p class="pressure">50%</p>
+              <p>Pressure</p>
             </div>
-          </div>            
-          <!-- <div>
-            <img src="images/pressure.png" />
-            <p class="datum">50%</p>
-            <p>Pressure</p>
-            </div>
-          </div>           -->
-
+          </div>
         </div>
       </div>
     </div>
